--- a/style.css
+++ b/style.css
@@ -3,10 +3,69 @@ html, body{
     overflow: hidden;
 }
 
+/*Main Index file*/
+.topBtns, .center, .sec{
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 5px;
+    font-weight: 600;
+}
+
+.topBtns{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+    color: white;
+    font-size: 1.5vw;
+    margin-left: 70%;
+    margin-top: 3%;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+.center{
+    text-align: center;
+    margin-left: 1%;
+    margin-top: 14%;
+}
+
+.img{
+    height: 3vw;
+    width: auto;
+}
+
+.text{
+    color: white;
+    font-size: 1.5vw;
+    margin: 6em 0.5em;
+}
+
+.dot{
+    font-family: 'FontAwesome', sans-serif;
+    color: #fdc800;
+    font-size: 0.75vw;
+    /* padding-bottom: 0px; */
+}
+
+.start{
+    color: white;
+    font-size: 2vw;
+    margin: 2em 0.5em;
+}
+
+.sec{
+    color: white;
+    font-size: 2vw;
+    margin: 3em 5em;
+    text-align: center;
+}
+
+/*Console Page */
+
 #myCanvas{
-    width: 1225px;
-    height: 450px;
-    margin: 1em 4em;
+    margin: 1vw 2vw;
     background-color: white;
 }
 
@@ -26,7 +85,7 @@ html, body{
     height: 4vw; */
     /* border: 0.5px solid white; */
     border-radius: 5px;
-    margin: 0.5vw 5vw;
+    margin: 0.5vw 6vw;
 }
 
 .mods{
@@ -48,10 +107,10 @@ html, body{
 
 .boxes{
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 3vw;
-    grid-gap: 3em;
-    margin: 2em;
+    grid-gap: 5vw;
+    margin: 3vw 20vw;
 }
 
 .boxes > div{
@@ -70,7 +129,7 @@ html, body{
     text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 3fr;
-    margin-left: 28vw;
+    margin-left: 20vw;
 }
 
 .btns > div{
