--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body{
     background-color: black;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /*Main Index file*/
@@ -60,6 +60,26 @@ a{
     font-size: 2vw;
     margin: 3em 5em;
     text-align: center;
+}
+
+.imgBoxes{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    grid-gap: 1em;
+}
+
+.imgBoxes > div{
+    border: 1px solid white;
+    text-align: center;
+    font-size: 1vw;
+    color: white;
+    padding: 0.5em;
+}
+
+.blendImg{
+    height: 15vw;
+    width: 100%;
 }
 
 /*Console Page */
@@ -129,7 +149,7 @@ a{
     text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 3fr;
-    margin-left: 20vw;
+    margin-left: 15vw;
 }
 
 .btns > div{
